Add strawberry rhubarb cruble recepie

--- a/recepies/hot-honey-drumstick.html
+++ b/recepies/hot-honey-drumstick.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hot Honey Drumsticks Recepie</h1>
-    <img src="hot-honey-drumstics.webp" alt="hot honey drumstics image">
+    <img src="../images/hot-honey-drumstics.webp" alt="hot honey drumstics">
     <h2>Description</h2>
     <p>
         This is a very spicy recipe, so the quantities for the hot pepper components can be reduced for a milder final product.
