--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recepies</h1>
     <a href="./recepies/hot-honey-drumstick.html">Hot Honey Drumsticks</a>
+    <a href="./recepies/strawberry-rhubarb-cruble.html">Strawberry Rhubarb Cruble</a>
 </body>
 </html>
