Add bacon apples recepie

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recepies</h1>
     <a href="./recepies/hot-honey-drumstick.html">Hot Honey Drumsticks</a>
     <a href="./recepies/strawberry-rhubarb-cruble.html">Strawberry Rhubarb Cruble</a>
+    <a href="./recepies/bacon-apples.html">Bacon Apples</a>
 </body>
 </html>
