Make unordered list of recepies

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recepies</h1>
     <ul>
-        <a href="./recepies/hot-honey-drumstick.html">Hot Honey Drumsticks</a>
-        <a href="./recepies/strawberry-rhubarb-cruble.html">Strawberry Rhubarb Cruble</a>
-        <a href="./recepies/bacon-apples.html">Bacon Apples</a>
+        <li><a href="./recepies/hot-honey-drumstick.html">Hot Honey Drumsticks</a></li>
+        <li><a href="./recepies/strawberry-rhubarb-cruble.html">Strawberry Rhubarb Cruble</a></li>
+        <li><a href="./recepies/bacon-apples.html">Bacon Apples</a></li>
     </ul>
 </body>
 </html>
