Add external CSS with basic styling

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recepies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="content">
     <h1>Odin Recepies</h1>
     <ul>
         <li><a href="./recepies/hot-honey-drumstick.html">Hot Honey Drumsticks</a></li>
         <li><a href="./recepies/strawberry-rhubarb-cruble.html">Strawberry Rhubarb Cruble</a></li>
         <li><a href="./recepies/bacon-apples.html">Bacon Apples</a></li>
     </ul>
+    </div>
 </body>
 </html>
